implemented the name to names

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=TeacherManagementDB;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "watch": {
+    "hotReloadEnabled": true
+  },
+ 
+
+
   "AllowedHosts": "*"
 }
